<resources>
    <string name="app_name">Janshakti_News</string>
    <string name="the_news_app">Janshakti_News</string>
    <string name="login">Login</string>
    <string name="Continue">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="icons_by_icons8">Icons by <a href="https://www.icons8.com">Icons8</a>.</string>
    <string name="news_data_from_newsapi">News Data from <a href="https://www.newsapi.org">NewsAPI</a>.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_with_email_and_password">Sign In</string>
    <string name="log_in_using_another_service">OR SIGN IN WITH</string>
    <string name="login_with_google_account">Login with Google Account</string>
    <string name="what_s_this"><u>What\'s This?</u></string>
    <string name="noAccount">Don\'t have an account? </string>
    <string name="signUpLink"><u>Sign Up</u></string>
    <string name="logo_of_just_the_news_application">Logo of Just the News Application</string>
    <string name="these_options_allow_you_to_log_in_using_your_google_or_apple_account_credentials">You can log in using your Google account credentials.\n \nChoose this option if you would prefer not to make a dedicated Just the News account</string>
    <string name="close">Close</string>
    <string name="log_in_using_an_existing_account">Log in using an existing Just the News or Google account</string>
    <string name="create_a_just_the_news_account">Create a Just the News account</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in"><u>Log In</u></string>
    <string name="enter_your_details">Enter your details</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="required">Required</string>
    <string name="too_short">Too short</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_must_match">Password must match</string>
    <string name="no_account_found_by_these_details">No account found by these details</string>
    <string name="email_address_field_is_empty">Email Address field is empty</string>
    <string name="password_field_is_empty">Password field is empty</string>
    <string name="email_and_password_fields_are_empty">Email and Password fields are empty</string>
    <string name="search_for_news">Search for News</string>
    <string name="navigation_bar_button">Navigation Bar Button</string>
    <string name="search_button">Search Button</string>
    <string name="news_article_image">News Article Image</string>
    <string name="no_results_found">No results found</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navHeaderGreeting">%1$s, %2$s!</string>
    <string name="navHeaderGreetingNoName">%1$s!</string>
    <string name="placeholder_image">Placeholder image</string>
    <string name="articleSource">- %1$s</string>
    <string name="back">Back</string>
    <string name="save_article_button">Save article button</string>
    <string name="you_haven_t_saved_any_articles_yet">You haven\'t saved any articles yet!</string>
    <string name="no_saved_articles">No saved articles</string>
    <string name="select_your_country">Select a country</string>
    <string name="image_of_country_flag">Image of country flag</string>
</resources>