<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_24"
        android:title="@string/home"
        app:itemTextAppearance="@font/montserrat_light" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/user_24"
        android:title="@string/profile"
        app:itemTextAppearance="@font/montserrat_light" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings_24"
        android:title="@string/settings"
        app:itemTextAppearance="@font/montserrat_light" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout_24"
        android:title="@string/logout"
        app:itemTextAppearance="@font/montserrat_light" />
</menu>