<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPurple"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/localLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/login_with_email_and_password"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.162" />

    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.187" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressField"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.112" />

    <View
        android:id="@+id/right_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/loginServices"
        app:layout_constraintEnd_toStartOf="@+id/loginServices"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/log_in_using_another_service"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <View
        android:id="@+id/left_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/loginServices"
        app:layout_constraintStart_toEndOf="@+id/loginServices"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/googleLogin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/login_with_google_account"
        android:src="@drawable/android_light_sq_si_1x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginServices"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/SSOInfo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/what_s_this"
        android:textColor="@color/links"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLogin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/noAccount"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localLogin" />

    <TextView
        android:id="@+id/signUpRedirect"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/signUpLink"
        android:textColor="@color/links"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/noAccountText"
        app:layout_constraintTop_toBottomOf="@+id/localLogin" />

    <ImageView
        android:id="@+id/newsLogo"
        android:layout_width="109dp"
        android:layout_height="69dp"
        android:contentDescription="@string/logo_of_just_the_news_application"
        android:src="@drawable/news_logo_240"
        app:layout_constraintBottom_toTopOf="@+id/welcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/montserrat_light"
        android:text=""
        android:textColor="@color/errorRed"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

</androidx.constraintlayout.widget.ConstraintLayout>