<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPurple"
    android:orientation="vertical"
    tools:context=".activities.AccCreationActivity">

    <ImageView
        android:id="@+id/newsLogo"
        android:layout_width="109dp"
        android:layout_height="69dp"
        android:contentDescription="@string/logo_of_just_the_news_application"
        android:src="@drawable/news_logo_240"
        app:layout_constraintBottom_toTopOf="@+id/headerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/loginInfo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/loginRedirect"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/links"
        app:layout_constraintBottom_toTopOf="@+id/firstNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterDetails"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/enterDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/enter_your_details"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/loginInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/enter_first_name"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterDetails"
        app:layout_constraintVertical_bias="0.131" />

    <EditText
        android:id="@+id/surnameField"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/enter_surname"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameField"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressField"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/confirmPasswordField"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.176" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField"
        app:layout_constraintVertical_bias="0.539" />

    <TextView
        android:id="@+id/firstNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/montserrat_light"
        android:text=""
        android:textColor="@color/errorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField" />

    <TextView
        android:id="@+id/surnameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text=""
        android:textColor="@color/errorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameField" />

    <TextView
        android:id="@+id/emailAddressError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text=""
        android:textColor="@color/errorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressField" />

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text=""
        android:textColor="@color/errorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <TextView
        android:id="@+id/confirmPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text=""
        android:textColor="@color/errorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField" />

</androidx.constraintlayout.widget.ConstraintLayout>
